test_suite/tests/ui/string/validate/unknown.stderr
error: Unknown validation attribute: `unique`.
       Possible attributes are `len_char_min`, `len_char_max`, `len_utf16_min`, `len_utf16_max`, `not_empty`, `predicate`, `regex`, `with`, `error`.
 --> tests/ui/string/validate/unknown.rs:3:19
  |
3 | #[nutype(validate(unique))]
  |                   ^^^^^^
